<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/recipe_elt_preview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/side_nav_bar"
            android:contentDescription="@string/recipe_elt_preview_alt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipe_elt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:singleLine="true"
            android:text="@string/recipe_elt_title"
            android:textColor="#2A2A2A"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recipe_elt_preview"
            app:layout_constraintTop_toTopOf="@+id/recipe_elt_preview" />

        <TextView
            android:id="@+id/recipe_elt_desc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/lorem"
            android:textColor="#7B7B7B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_elt_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/recipe_elt_title"
            app:layout_constraintTop_toBottomOf="@+id/recipe_elt_title"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>